--- a/index.html
+++ b/index.html
@@ -1,156 +1,224 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>MRC | Education & Programming</title>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>MRC - Modern Solutions</title>
   <style>
+    :root {
+      --primary-color: #2c3e50;
+      --accent-color: #e74c3c;
+      --bg-color: #ecf0f1;
+      --text-color: #333;
+    }
     * {
-      box-sizing: border-box;
       margin: 0;
       padding: 0;
-      font-family: 'Roboto', sans-serif;
+      box-sizing: border-box;
     }
     body {
+      font-family: 'Arial', sans-serif;
+      color: var(--text-color);
+      background: var(--bg-color);
       line-height: 1.6;
-      background-color: #f5f5f5;
-      color: #333;
-      scroll-behavior: smooth;
     }
-    header, footer {
-      background-color: #003366;
+    header {
+      background: var(--primary-color);
       color: white;
-      padding: 20px;
-      text-align: center;
-      animation: fadeIn 1.5s ease-in;
+      padding: 1rem;
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+    }
+    .container {
+      width: 90%;
+      max-width: 1200px;
+      margin: auto;
     }
     nav {
       display: flex;
-      justify-content: center;
-      gap: 20px;
-      background-color: #004080;
-      padding: 10px;
-      flex-wrap: wrap;
-      animation: slideDown 1s ease-in-out;
+      justify-content: space-between;
+      align-items: center;
     }
-    nav a {
-      color: white;
-      text-decoration: none;
+    .logo {
+      font-size: 1.5rem;
       font-weight: bold;
     }
-    nav a:hover {
-      text-decoration: underline;
+    .nav-links {
+      list-style: none;
+      display: flex;
+    }
+    .nav-links li {
+      margin-left: 1rem;
+    }
+    .nav-links a {
+      color: white;
+      text-decoration: none;
+      transition: color 0.3s ease;
+    }
+    .nav-links a:hover {
+      color: var(--accent-color);
+    }
+    .hamburger {
+      display: none;
+      flex-direction: column;
+      cursor: pointer;
+    }
+    .hamburger div {
+      width: 25px;
+      height: 3px;
+      background: white;
+      margin: 4px;
+      transition: all 0.3s ease;
+    }
+    @media (max-width: 768px) {
+      .nav-links {
+        position: absolute;
+        right: 0;
+        top: 100%;
+        background: var(--primary-color);
+        flex-direction: column;
+        width: 100%;
+        max-height: 0;
+        overflow: hidden;
+        transition: max-height 0.3s ease-in;
+      }
+      .nav-links li {
+        margin: 1rem 0;
+        text-align: center;
+      }
+      .hamburger {
+        display: flex;
+      }
+      .nav-active {
+        max-height: 300px;
+      }
+      .toggle div:nth-child(1) {
+        transform: rotate(-45deg) translate(-5px, 6px);
+      }
+      .toggle div:nth-child(2) {
+        opacity: 0;
+      }
+      .toggle div:nth-child(3) {
+        transform: rotate(45deg) translate(-5px, -6px);
+      }
     }
     section {
-      padding: 40px 20px;
-      max-width: 1000px;
-      margin: auto;
-      animation: fadeInUp 1s ease-in-out;
+      padding: 4rem 0;
     }
     h2 {
-      color: #003366;
-      margin-bottom: 10px;
-    }
-    .team {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-      gap: 20px;
-    }
-    .card {
-      background: white;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
       text-align: center;
-      transition: transform 0.3s;
+      margin-bottom: 2rem;
+      color: var(--primary-color);
     }
-    .card:hover {
-      transform: translateY(-5px);
+    .services, .about, .team {
+      background: white;
+      margin-bottom: 2rem;
+      border-radius: 8px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      padding: 2rem;
     }
-    .btn {
-      display: inline-block;
-      background-color: #004080;
-      color: white;
-      padding: 10px 20px;
-      margin: 10px 5px;
-      border: none;
-      border-radius: 5px;
+    .services .service-items, .team .team-members {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 1.5rem;
+    }
+    .service, .member {
+      background: var(--bg-color);
+      padding: 1.5rem;
+      border-radius: 8px;
+      text-align: center;
+    }
+    .member img {
+      width: 150px;
+      height: 150px;
+      border-radius: 50%;
+      object-fit: cover;
+      margin-bottom: 1rem;
+    }
+    .contact {
+      text-align: center;
+      background: white;
+      padding: 2rem;
+      border-radius: 8px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    }
+    .contact a {
+      color: var(--primary-color);
       text-decoration: none;
-      font-size: 16px;
-      transition: background-color 0.3s;
+      margin: 0.5rem;
+      display: inline-block;
+      transition: color 0.3s ease;
     }
-    .btn:hover {
-      background-color: #0059b3;
+    .contact a:hover {
+      color: var(--accent-color);
     }
-    footer a {
-      color: #cce5ff;
-    }@keyframes fadeIn {
-  0% { opacity: 0; }
-  100% { opacity: 1; }
-}
-@keyframes slideDown {
-  0% { transform: translateY(-100%); opacity: 0; }
-  100% { transform: translateY(0); opacity: 1; }
-}
-@keyframes fadeInUp {
-  0% { transform: translateY(30px); opacity: 0; }
-  100% { transform: translateY(0); opacity: 1; }
-}
-.logo {
-  width: 100px;
-  margin-bottom: 10px;
-}
-
   </style>
 </head>
 <body>
   <header>
-    <img src="MRC.png" alt="MRC Logo" class="logo">
-    <h1>Welcome to MRC</h1>
-    <p>Empowering Education & Programming</p>
-  </header>  <nav>
-    <a href="#about">About Us</a>
-    <a href="#team">Our Team</a>
-    <a href="#companies">Other Companies</a>
-    <a href="#contact">Contact</a>
-  </nav>  <section id="about">
-    <h2>About Us</h2>
-    <p>MRC is a leading company in the fields of education and programming. We strive to build a future where technology enhances learning and creativity.</p>
-  </section>  <section id="team">
-    <h2>Our Team</h2>
-    <div class="team">
-      <div class="card">
-        <h3>CEO</h3>
-        <p>Mostafa Hesham Alatawy</p>
-      </div>
-      <div class="card">
-        <h3>COO</h3>
-        <p>Coming Soon</p>
-      </div>
-      <div class="card">
-        <h3>CFO</h3>
-        <p>Coming Soon</p>
-      </div>
-      <div class="card">
-        <h3>CTO</h3>
-        <p>Coming Soon</p>
-      </div>
+    <div class="container">
+      <nav>
+        <div class="logo">MRC</div>
+        <ul class="nav-links">
+          <li><a href="#services">Services</a></li>
+          <li><a href="#about">About Us</a></li>
+          <li><a href="#team">Team</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+        <div class="hamburger">
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
+      </nav>
     </div>
-  </section>  <section id="companies">
-    <h2>Other Companies</h2>
-    <ul>
-      <li><strong>MRC SkillUP</strong> – A platform offering various professional courses.</li>
-      <li><strong>MRC Bank</strong> – A virtual banking experience with card creation and management.</li>
-      <li><strong>MRC Media</strong> – A social media platform for sharing photos, videos, and text.</li>
-      <li><strong>MRC News</strong> – A news website featuring articles and updates.</li>
-      <li><strong>عرابيا للذكاء الاصطناعي</strong> – An Arabic platform for chatting with AI and training it on new topics.</li>
-    </ul>
-  </section>  <section id="contact">
-    <h2>Contact With Us</h2>
-    <a href="mailto:mrc.egypt.world@gmail.com" class="btn">Email Us</a>
-    <a href="https://www.facebook.com/share/19N9xo3hpD/?mibextid=qi2Omg" class="btn" target="_blank">Visit Facebook Page</a>
-  </section>  <footer>
-    <p>&copy; 2025 MRC. All Rights Reserved.</p>
-  </footer>
+  </header>
+  <main>
+    <section id="services" class="services container">
+      <h2>Our Services</h2>
+      <div class="service-items">
+        <div class="service">
+          <h3>Service 1</h3>
+          <p>Description of service 1.</p>
+        </div>
+        <div class="service">
+          <h3>Service 2</h3>
+          <p>Description of service 2.</p>
+        </div>
+        <div class="service">
+          <h3>Service 3</h3>
+          <p>Description of service 3.</p>
+        </div>
+      </div>
+    </section>
+    <section id="about" class="about container">
+      <h2>About Us</h2>
+      <p>MRC is a leading company in [your industry], committed to delivering top-notch solutions to our clients worldwide.</p>
+    </section>
+    <section id="team" class="team container">
+      <h2>Our Team</h2>
+      <div class="team-members">
+        <div class="member">
+          <img src="https://via.placeholder.com/150" alt="Mostafa Hesham Alatawy">
+          <h3>Mostafa Hesham Alatawy</h3>
+          <p>CEO</p>
+        </div>
+      </div>
+    </section>
+    <section id="contact" class="contact container">
+      <h2>Contact Us</h2>
+      <p>Email: <a href="mailto:mrc.egypt.world">mrc.egypt.world</a></p>
+      <p>Facebook: <a href="#" id="fb-link">Replace with your Facebook page URL</a></p>
+    </section>
+  </main>
+  <script>
+    const hamburger = document.querySelector('.hamburger');
+    const navLinks = document.querySelector('.nav-links');
+    hamburger.addEventListener('click', () => {
+      navLinks.classList.toggle('nav-active');
+      hamburger.classList.toggle('toggle');
+    });
+  </script>
 </body>
 </html>
