--- a/index.html
+++ b/index.html
@@ -630,9 +630,9 @@
                         <p>CEO & Founder</p>
                         <p>Visionary leader with extensive experience in business strategy and development.</p>
                         <div class="social-links">
-                            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                            <a href="www.linkedin.com/in/mostafa-hesham-coding"><i class="fab fa-linkedin-in"></i></a>
                             <a href="#"><i class="fab fa-twitter"></i></a>
-                            <a href="#"><i class="fas fa-envelope"></i></a>
+                            <a href="mailto:mostafaalatawy3@gmail.com"><i class="fas fa-envelope"></i></a>
                         </div>
                     </div>
                 </div>
