--- a/index.html
+++ b/index.html
@@ -563,6 +563,28 @@
                 <p>We offer a comprehensive range of services designed to meet your business needs and exceed your expectations.</p>
             </div>
             <div class="services-grid">
+                <!-- In the Services section, add this new service card to the services-grid div: -->
+<div class="services-grid">
+    <!-- Existing services cards... -->
+    
+    <div class="service-card">
+        <div class="service-img">
+            <img src="https://images.unsplash.com/photo-1523050854058-8df90110c9f1?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80" alt="Educational Content & Courses">
+        </div>
+        <div class="service-content">
+            <h3>Educational Content & Courses</h3>
+            <p>Comprehensive educational programs and training courses designed to enhance skills and knowledge in various business domains.</p>
+            <ul style="margin: 15px 0; padding-left: 20px;">
+                <li>Professional development courses</li>
+                <li>Industry-specific training programs</li>
+                <li>Certification preparation</li>
+                <li>E-learning content development</li>
+                <li>Workshops and seminars</li>
+            </ul>
+            <a href="#">Learn More <i class="fas fa-arrow-right"></i></a>
+        </div>
+    </div>
+</div>
                 <div class="service-card">
                     <div class="service-img">
                         <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80" alt="Business Consulting">
