--- a/index.html
+++ b/index.html
@@ -648,13 +648,13 @@
                 <div class="team-member">
                     
                     <div class="member-info">
-                        <h3>Mostafa Hesham Alatawy</h3>
+                        <h3>??</h3>
                         <p>CEO & Founder</p>
                         <p>Visionary leader with extensive experience in business strategy and development.</p>
                         <div class="social-links">
-                            <a href="www.linkedin.com/in/mostafa-hesham-coding"><i class="fab fa-linkedin-in"></i></a>
+                            <a href="#"><i class="fab fa-linkedin-in"></i></a>
                             <a href="#"><i class="fab fa-twitter"></i></a>
-                            <a href="mailto:mostafaalatawy3@gmail.com"><i class="fas fa-envelope"></i></a>
+                            <a href="#><i class="fas fa-envelope"></i></a>
                         </div>
                     </div>
                 </div>
